--- a/src/translations/ch/translations.json
+++ b/src/translations/ch/translations.json
@@ -19,5 +19,6 @@
 	"responsibility": "社会责任",
 	"scientific": "科研开发",
 	"structure": "组织架构",
-	"welcome": "走进立得"
+	"welcome": "走进立得",
+	"magazine": "我与立得同行"
 }
