--- a/src/translations/ch/translations.json
+++ b/src/translations/ch/translations.json
@@ -15,7 +15,7 @@
 	"news": "新闻动态",
 	"positions": "责任与关怀",
 	"product": "产品与服务",
-	"qualification": "荣誉与资质",
+	"qualification": "资质与荣誉",
 	"responsibility": "社会责任",
 	"scientific": "科研开发",
 	"structure": "组织架构",
