修复索引分页，修复部分翻译

--- a/src/translations/en/translations.json
+++ b/src/translations/en/translations.json
@@ -3,7 +3,7 @@
 	"center": "Product Center",
 	"companyname": "Shanghai leader Catalyst Co.,ltd",
 	"contact": "Contact Us",
-	"culture": "Corporate Culture",
+	"culture": "Company Culture",
 	"copyright": "Shanghai ICP - No.05018542",
 	"declaration": "Declaration of Responsibility",
 	"employee": "Employee Care",
@@ -11,13 +11,13 @@
 	"home": "Home",
 	"information": "Information Disclosure",
 	"introduction": "Company Introduction",
-	"mservice": "Market service",
+	"mservice": "Market Service",
 	"news": "News",
-	"positions": "Social Positins",
+	"positions": "Obligation and Care",
 	"product": "Product And Service",
 	"qualification": "Honor and Qualification",
 	"responsibility": "Social Responsibility",
-	"scientific": "Scientific Research",
-	"structure": "Organizational Structure",
-	"welcome": "About Leadercata"
+	"scientific": "R&D",
+	"structure": "Organization Structure",
+	"welcome": "About Us"
 }
