--- a/src/translations/ch/translations.json
+++ b/src/translations/ch/translations.json
@@ -20,5 +20,41 @@
 	"scientific": "科研开发",
 	"structure": "组织架构",
 	"welcome": "走进立得",
-	"magazine": "我与立得同行"
+	"magazine": "我与立得同行",
+	"brandconcept":"品牌理念",
+	"valueconcept":"价值理念",
+	"socialresponsibility":"社会责任",
+	"awardswon":"所获奖项",
+	"certificat":"证书",
+	"productsearch":"产品搜索",
+	"noproduct":"暂无产品",
+	"loadmore":"加载更多",
+	"productdisplay":"产品展示",
+	"productindex":"产品索引",
+	"no":"序号",
+	"series":"系列",
+	"category":"名称",
+	"type":"种类",
+	"siptbs":"可替代进口同类产品",
+	"applicableprocess":"适用工艺",
+	"recommendnews":"推荐新闻",
+	"returnlist":"返回列表",
+	"onlinepreview":"在线预览",
+	"filedownload":"文件下载",
+	"formatpdf":"格式：PDF",
+	"responsibilitydetail":"责任详情",
+	"viewdetails":"查看详情",
+	"employeedetail":"员工关怀详情",
+	"readdetail":"阅读详情",
+	"pleasename":"请输入姓名",
+	"pleasecontact":"请输入联系方式",
+	"pleasemessage":"请输入留言",
+	"thankmessage":"感谢您的留言",
+	"messagesuccessful":"留言成功!",
+	"name":"姓名",
+	"contactway":"联系方式",
+	"unitbelongs":"所属单位",
+	"leavemessage":"留言",
+	"submit":"提交",
+	"newsdetails":"新闻详情"
 }
