--- a/src/translations/en/translations.json
+++ b/src/translations/en/translations.json
@@ -19,5 +19,41 @@
 	"responsibility": "Social Responsibility",
 	"scientific": "R&D",
 	"structure": "Organization Structure",
-	"welcome": "About Us"
+	"welcome": "About Us",
+	"brandconcept":"Brand concept",
+	"valueconcept":"Value concept",
+	"socialresponsibility":"Social responsibility",
+	"awardswon":"Awards won",
+	"certificat":"Certificat",
+	"productsearch":"Product search",
+	"noproduct":"There is no product for the time being",
+	"loadmore":"Load more",
+	"productdisplay":"Product display",
+	"productindex":"Product index",
+	"no":"No.",
+	"series":"Series",
+	"category":"Category",
+	"type":"Type",
+	"siptbs":"Similar imported product to be substituted",
+	"applicableprocess":"Applicable process",
+	"recommendnews":"Recommend news",
+	"returnlist":"Return list",
+	"onlinepreview":"Online preview",
+	"filedownload":"File download",
+	"formatpdf":"Format: PDF",
+	"responsibilitydetail":"Details of responsibility",
+	"viewdetails":"View details",
+	"employeedetail":"Details of employee Care",
+	"readdetail":"Read the details",
+	"pleasename":"Please enter a name",
+	"pleasecontact":"Please enter contact information",
+	"pleasemessage":"Please enter a message",
+	"thankmessage":"Thank you for your message",
+	"messagesuccessful":"Message successful!",
+	"name":"name",
+	"contactway":"Contact information",
+	"unitbelongs":"Unit to which it belongs",
+	"leavemessage":"Leave a message",
+	"submit":"Submit",
+	"newsdetails":"News details"
 }
