--- a/src/translations/ch/translations.json
+++ b/src/translations/ch/translations.json
@@ -59,6 +59,8 @@
 	"search":"搜索",
 	"nodatafound":"没有找到数据",
 	"keywordsearch":"关键字查找",
+	"wechatofficialaccount":"立得催化剂官方公众号",
+	"officialmicorblog":"立得催化剂官方微博",
 	"nodatatryother":"没有搜索到相关数据，试一试搜索其他关键字",
 	"newsdetails":"新闻详情"
 }
