--- a/src/translations/en/translations.json
+++ b/src/translations/en/translations.json
@@ -14,7 +14,7 @@
 	"mservice": "Market Service",
 	"news": "News",
 	"positions": "Obligation and Care",
-	"product": "Product And Service",
+	"product": "Product and Service",
 	"qualification": "Honor and Qualification",
 	"responsibility": "Social Responsibility",
 	"scientific": "R&D",
