--- a/src/translations/en/translations.json
+++ b/src/translations/en/translations.json
@@ -20,46 +20,46 @@
 	"scientific": "R&D",
 	"structure": "Organization Structure",
 	"welcome": "About Us",
-	"brandconcept":"Brand concept",
-	"valueconcept":"Value concept",
-	"socialresponsibility":"Social responsibility",
-	"awardswon":"Awards won",
+	"brandconcept":"Brand Concept",
+	"valueconcept":"Value Concept",
+	"socialresponsibility":"Social Responsibility",
+	"awardswon":"Awards Won",
 	"certificat":"Certificat",
-	"productsearch":"Product search",
+	"productsearch":"Product Search",
 	"noproduct":"There is no product for the time being",
-	"loadmore":"Load more",
-	"productdisplay":"Product display",
-	"productindex":"Product index",
+	"loadmore":"Load More",
+	"productdisplay":"Product Display",
+	"productindex":"Product Index",
 	"no":"No.",
 	"series":"Series",
 	"category":"Category",
 	"type":"Type",
 	"siptbs":"Similar imported product to be substituted",
-	"applicableprocess":"Applicable process",
-	"recommendnews":"Recommend news",
-	"returnlist":"Return list",
+	"applicableprocess":"Applicable Process",
+	"recommendnews":"Recommend News",
+	"returnlist":"Return List",
 	"onlinepreview":"preview",
 	"filedownload":"download",
 	"formatpdf":"Format: PDF",
-	"responsibilitydetail":"Details of responsibility",
-	"viewdetails":"View details",
+	"responsibilitydetail":"Details of Responsibility",
+	"viewdetails":"View Details",
 	"employeedetail":"Details of employee Care",
-	"readdetail":"Read the details",
+	"readdetail":"Details",
 	"pleasename":"Please enter a name",
 	"pleasecontact":"Please enter contact information",
 	"pleasemessage":"Please enter a message",
 	"thankmessage":"Thank you for your message",
 	"messagesuccessful":"Message successful!",
 	"name":"name",
-	"contactway":"Contact information",
+	"contactway":"Contact Information",
 	"unitbelongs":"Unit to which it belongs",
 	"leavemessage":"Leave a message",
 	"submit":"Submit",
 	"search":"Search",
 	"nodatafound":"No data found",
-	"keywordsearch":"Keyword search",
+	"keywordsearch":"Keyword Search",
 	"wechatofficialaccount":"WeChat official account",
 	"officialmicorblog":"Official Micro-blog",
 	"nodatatryother":"No relevant data was found. Try searching for other keywords.",
-	"newsdetails":"News details"
+	"newsdetails":"News Details"
 }
