--- a/src/translations/ch/translations.json
+++ b/src/translations/ch/translations.json
@@ -62,5 +62,6 @@
 	"wechatofficialaccount":"立得催化剂官方公众号",
 	"officialmicorblog":"立得催化剂官方微博",
 	"nodatatryother":"没有搜索到相关数据，试一试搜索其他关键字",
-	"newsdetails":"新闻详情"
+	"newsdetails":"新闻详情",
+	"titleIndex": "立得催化剂"
 }
