--- a/src/translations/en/translations.json
+++ b/src/translations/en/translations.json
@@ -61,5 +61,6 @@
 	"wechatofficialaccount":"WeChat official account",
 	"officialmicorblog":"Official Micro-blog",
 	"nodatatryother":"No relevant data was found. Try searching for other keywords.",
-	"newsdetails":"News Details"
+	"newsdetails":"News Details",
+	"titleIndex": "LEADER CATALYST"
 }
