自适应修改

--- a/src/translations/en/translations.json
+++ b/src/translations/en/translations.json
@@ -23,7 +23,7 @@
 	"brandconcept":"Brand Concept",
 	"valueconcept":"Value Concept",
 	"socialresponsibility":"Social Responsibility",
-	"awardswon":"Awards Won",
+	"awardswon":"Awards received",
 	"certificat":"Certificat",
 	"productsearch":"Product Search",
 	"noproduct":"There is no product for the time being",
