作者 部门修改

--- a/src/translations/en/translations.json
+++ b/src/translations/en/translations.json
@@ -62,5 +62,8 @@
 	"officialmicorblog":"Official Micro-blog",
 	"nodatatryother":"No relevant data was found. Try searching for other keywords.",
 	"newsdetails":"News Details",
+	"author":"Author",
+	"publisher":"Publisher",
+	"selectedweekly":"Selected weekly",
 	"titleIndex": "LEADER CATALYST"
 }
