--- a/src/translations/ch/translations.json
+++ b/src/translations/ch/translations.json
@@ -63,5 +63,8 @@
 	"officialmicorblog":"立得催化剂官方微博",
 	"nodatatryother":"没有搜索到相关数据，试一试搜索其他关键字",
 	"newsdetails":"新闻详情",
+	"author":"发布人",
+	"publisher":"发布单位",
+	"selectedweekly":"精选周刊",
 	"titleIndex": "立得催化剂"
 }
