--- a/src/translations/en/translations.json
+++ b/src/translations/en/translations.json
@@ -65,7 +65,7 @@
 	"author":"Author",
 	"publisher":"Publisher",
 	"selectedweekly":"Selected weekly",
-	"titleIndex": "LEADER CATALYST",
+	"titleIndex": "Shanghai Leader Catalyst Co., Ltd.",
 	"phone1": "Colligation Management Dep.:（+86）- 57294218",
 	"phone2": "Market     Development Dep.:（+86）- 57294299"
 }
