--- a/src/translations/ch/translations.json
+++ b/src/translations/ch/translations.json
@@ -66,7 +66,7 @@
 	"author":"发布人",
 	"publisher":"发布单位",
 	"selectedweekly":"精选周刊",
-	"titleIndex": "立得催化剂",
+	"titleIndex": "上海立得催化剂有限公司",
 	"phone1": "综合管理部：（+86）- 57294218",
 	"phone2": "市场开发部：（+86）- 57294299"
 }
