产品索引增加序号

--- a/src/translations/en/translations.json
+++ b/src/translations/en/translations.json
@@ -67,5 +67,6 @@
 	"selectedweekly":"Selected weekly",
 	"titleIndex": "Shanghai Leader Catalyst Co., Ltd.",
 	"phone1": "Colligation Management Dep.:（+86）- 57294218",
-	"phone2": "Market     Development Dep.:（+86）- 57294299"
+	"phone2": "Market     Development Dep.:（+86）- 57294299",
+	"sort": "sort"
 }
