--- a/src/translations/ch/translations.json
+++ b/src/translations/ch/translations.json
@@ -68,5 +68,6 @@
 	"selectedweekly":"精选周刊",
 	"titleIndex": "上海立得催化剂有限公司",
 	"phone1": "综合管理部：（+86）- 57294218",
-	"phone2": "市场开发部：（+86）- 57294299"
+	"phone2": "市场开发部：（+86）- 57294299",
+	"sort": "序号"
 }
