--- a/src/translations/en/translations.json
+++ b/src/translations/en/translations.json
@@ -15,7 +15,7 @@
 	"news": "News",
 	"positions": "Obligation and Care",
 	"product": "Product and Service",
-	"qualification": "Honor and Qualification",
+	"qualification": "Honor & Qualification",
 	"responsibility": "Social Responsibility",
 	"scientific": "R&D",
 	"structure": "Organization Structure",
@@ -68,5 +68,5 @@
 	"titleIndex": "Shanghai Leader Catalyst Co., Ltd.",
 	"phone1": "Colligation Management Dep.:（+86）- 57293345",
 	"phone2": "Market     Development Dep.:（+86）- 57294299",
-	"sort": "sort"
+	"sort": "No."
 }
