--- a/src/translations/en/translations.json
+++ b/src/translations/en/translations.json
@@ -13,8 +13,8 @@
 	"introduction": "Company Introduction",
 	"mservice": "Market Service",
 	"news": "News",
-	"positions": "Obligation and Care",
-	"product": "Product and Service",
+	"positions": "Obligation & Care",
+	"product": "Product & Service",
 	"qualification": "Honor & Qualification",
 	"responsibility": "Social Responsibility",
 	"scientific": "R&D",
