--- a/src/translations/ch/translations.json
+++ b/src/translations/ch/translations.json
@@ -69,5 +69,6 @@
 	"titleIndex": "上海立得催化剂有限公司",
 	"phone1": "综合管理部：（+86）- 57293345",
 	"phone2": "市场开发部：（+86）- 57294299",
-	"sort": "序号"
+	"sort": "序号",
+	"infuture":"更多值得期待... ..."
 }
