--- a/src/translations/en/translations.json
+++ b/src/translations/en/translations.json
@@ -68,5 +68,6 @@
 	"titleIndex": "Shanghai Leader Catalyst Co., Ltd.",
 	"phone1": "Colligation Management Dep.:（+86）- 57293345",
 	"phone2": "Market     Development Dep.:（+86）- 57294299",
-	"sort": "No."
+	"sort": "No.",
+	"infuture":"In Future：MORE TO EXPLORE… "
 }
